--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ test = [
 ]
 
 [tool.flit.module]
-name = "muckrack.muckrack-hmr"
+name = "muckrack.hmr"
 
 [tool.ruff]
 line-length = 119
@@ -61,7 +61,7 @@ regex = '''
   '''
 
 [[tool.tbump.file]]
-src = "src/muckrack/muckrack-hmr/__init__.py"
+src = "src/muckrack/hmr/__init__.py"
 version_template = "{major}.{minor}.{patch}"
 search = "__version__ = '{current_version}'"
 
